[project]
name = "lut"
description = "Custom nodes for ComfyUI for simple LUT file extraction from any image."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/thezveroboy/ComfyUI-lut"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-lut"
Icon = ""
